# code-navigator

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  architecture.md  test_bincode.rs
.github/workflows/: ci.yml  release.yml
src/: benchmark.rs  cli.rs  lib.rs  main.rs
src/core/: edge.rs  graph.rs  mod.rs  node.rs
src/parser/: go.rs  mod.rs  python.rs  typescript.rs
src/serializer/: binary.rs  compressed.rs  csv.rs  dot.rs  fast_compressed.rs  graphml.rs  index_cache.rs  json.rs  jsonl.rs  mod.rs  optimized_binary.rs
tests/fixtures/simple-go/: calculator.go  main.go
tests/fixtures/simple-js/: utils.js
tests/fixtures/simple-python/: async_utils.py  calculator.py
tests/fixtures/simple-ts/: async-utils.ts  calculator.ts
