[package]
name = "code-navigator"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "codenav"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
anyhow = "1.0"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
bincode = "1.3"
flate2 = "1.0"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.13"
